--- a/AccountingOfEquipmentInventoryManagementApp/Assets/Styles/ModuleStyles.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Assets/Styles/ModuleStyles.xaml
@@ -1,12 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="AppColors.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <!-- Глобальные настройки шрифта -->
+    <FontFamily x:Key="AppFont">pack://application:,,,/assets/fonts/PlayfairDisplay-Italic-VariableFont_wght</FontFamily>
+
     <!-- Window -->
     <Style TargetType="Window">
-        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
         <Setter Property="Background" Value="{StaticResource LightBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
     </Style>
@@ -19,6 +23,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Background" Value="White"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
     </Style>
 
     <!-- Button -->
@@ -30,6 +35,7 @@
         <Setter Property="Padding" Value="6,3"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -59,6 +65,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Background" Value="White"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
     </Style>
 
     <!-- ComboBox -->
@@ -68,6 +75,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Background" Value="White"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
     </Style>
 
     <!-- DataGrid -->
@@ -79,5 +87,7 @@
         <Setter Property="GridLinesVisibility" Value="None"/>
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="FontFamily" Value="{StaticResource AppFont}"/>
     </Style>
+
 </ResourceDictionary>
