--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -61,7 +61,7 @@
           ItemsSource="{Binding EquipmentStatuses}"
           SelectedItem="{Binding SelectedStatus, Mode=TwoWay}" />
                 <Label Grid.Row="2" Grid.Column="2" Content="Категория:" Margin="5" VerticalAlignment="Center"/>
-                <ComboBox x:Name="cbEquipmentCategory" Grid.Row="2" Grid.Column="3" Margin="5" DisplayMemberPath="Name"/>
+                <ComboBox x:Name="cbEquipmentCategory" Grid.Row="2" Grid.Column="3" Margin="5" ItemsSource="{Binding EquipmentStatuses}" SelectedItem="{Binding SelectedEquipmentStatus, Mode=TwoWay}" />
 
                 <!-- Дата покупки -->
                 <Label Grid.Row="3" Grid.Column="0" Content="Дата покупки:" Margin="5" VerticalAlignment="Center"/>
