--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -57,11 +57,9 @@
 
                 <!-- Ряд 2: Статус и Категория -->
                 <Label Grid.Row="2" Grid.Column="0" Content="Статус:" Margin="5" VerticalAlignment="Center"/>
-                <ComboBox Grid.Row="2" Grid.Column="1" Margin="5"
-          ItemsSource="{Binding EquipmentStatuses}"
-          SelectedItem="{Binding SelectedStatus, Mode=TwoWay}" />
+                <ComboBox Grid.Row="2" Grid.Column="1" Margin="5" ItemsSource="{Binding EquipmentStatuses}" SelectedItem="{Binding SelectedStatus, Mode=TwoWay}" />
                 <Label Grid.Row="2" Grid.Column="2" Content="Категория:" Margin="5" VerticalAlignment="Center"/>
-                <ComboBox x:Name="cbEquipmentCategory" Grid.Row="2" Grid.Column="3" Margin="5" ItemsSource="{Binding EquipmentStatuses}" SelectedItem="{Binding SelectedEquipmentStatus, Mode=TwoWay}" />
+                <ComboBox x:Name="cbEquipmentCategory" Grid.Row="2" Grid.Column="3" Margin="5" ItemsSource="{Binding EquipmentCategories}" SelectedItem="{Binding SelectedCategory, Mode=TwoWay}" DisplayMemberPath="Name" />
 
                 <!-- Дата покупки -->
                 <Label Grid.Row="3" Grid.Column="0" Content="Дата покупки:" Margin="5" VerticalAlignment="Center"/>
